@@ -1,2 +1,2 @@
-rasmus	a1fd80bd8c1fa79d3ff02192b2098bb50a85b81e
-compbio	a1fd80bd8c1fa79d3ff02192b2098bb50a85b81e
+rasmus	b7fde862fc733f116ca08b051ca63b3a59732cf9
+compbio	b7fde862fc733f116ca08b051ca63b3a59732cf9
